--- a/.gitignore
+++ b/.gitignore
@@ -215,3 +215,7 @@ FakesAssemblies/
 **/*.Server/GeneratedArtifacts
 **/*.Server/ModelManifest.xml
 _Pvt_Extensions
+
+\.idea/\.idea\.server_socketchat/\.idea/
+
+\.idea/\.idea\.server_socketchat/
